--- a/style.css
+++ b/style.css
@@ -7,9 +7,14 @@ h1 {
     text-shadow: 5px 1px 10px yellow
 }
 
-#homepage {
-    background-image: url("./images/carasol.png");
-    background-size: cover;
-    width: 90vw;
-    height: 90vh;
+#bg {
+    position: absolute;
+    /* background-image: url("./images/carasol.png");
+    background-size: cover; */
+    
+}
+
+.bg-image {
+    max-width: 100%;
+    height: auto;
 }
