--- a/style.css
+++ b/style.css
@@ -2,23 +2,35 @@
     width: 1000px;
 }
 
+body {
+    font-family: 'Libre Baskerville', serif;
+    font-family: 'Nunito', sans-serif;
+}
 .recipe-title {
     position: absolute;
     /* background-color: aqua; */
-    font-size: 10px;
-    top: 24px;
+    font-size: 50px;
+    text-transform: lowercase;
+    color: #78d953;
+    font-weight: bold;
+    top: 80px;
     left: 100px;
     width: 400px;
     height: 95px;
 }
 
 h1 {
-    font-family: 'Libre Baskerville', serif;
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Libre Baskerville', serif;
+    font-family: 'Nunito', sans-serif; */
     font-size: 5rem;
     text-transform: lowercase;
     color: red;
     text-shadow: 5px 1px 10px yellow
+}
+
+h2 {
+    color: #ef98c8;
+    text-transform: lowercase;
 }
 
 .bg-image {
@@ -46,7 +58,7 @@ h1 {
     /* background-color: aqua; */
     width: 460px;
     height: 420px;
-    top: 80px;
+    top: 130px;
     left: 480px;
     overflow: scroll;
 }
